# internal/docs/swagger.json
@@ -2278,9 +2278,9 @@
                     "example": "f47ac10b-58cc-4372-a567-0e02b2c3d479"
                 },
                 "status": {
-                    "description": "DRAFT | IN_PROGRESS | COMPLETED | CANCELLED | FAILED",
+                    "description": "DRAFT, IN_PROGRESS, COMPLETED, PARTIAL, FAILED, CANCELLED",
                     "type": "string",
-                    "example": ""
+                    "example": "DRAFT"
                 },
                 "title": {
                     "type": "string",
@@ -2494,7 +2494,9 @@
                     "$ref": "#/definitions/dto.PlanStats"
                 },
                 "status": {
-                    "type": "string"
+                    "description": "DRAFT, IN_PROGRESS, COMPLETED, PARTIAL, FAILED, CANCELLED",
+                    "type": "string",
+                    "example": "COMPLETED"
                 },
                 "title": {
                     "type": "string"
@@ -2567,7 +2569,8 @@
                     "type": "string"
                 },
                 "status": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "DRAFT"
                 },
                 "title": {
                     "type": "string"
@@ -2735,6 +2738,8 @@
                         "DRAFT",
                         "IN_PROGRESS",
                         "COMPLETED",
+                        "PARTIAL",
+                        "FAILED",
                         "CANCELLED"
                     ]
                 }
